<resources>
    <string name="app_name">BarcodeScan</string>
    <string name="decode_time">Time:</string>
    <string name="decode_symbology">Symbology:</string>
    <string name="decode_length">Length:</string>
    <string name="decode_data">Barcode:</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">Version</string>
    <string name="keyboard_output">Keyboard Output</string>
    <string name="intent_output">Intent Output</string>
    <string name="continuous_scan">Continuous Scan</string>
    <array name="appendCharType">
        <item>None</item>
        <item>Carriage return</item>
        <item>Line feed</item>
        <item>TAB</item>
    </array>
</resources>
