<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/scanResult"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:singleLine="true"
        android:layout_marginTop="10dp" />

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_weight="0.0"
        android:background="#88808080"
        android:columnCount="2"
        android:paddingLeft="10.0dip"
        android:paddingTop="3.0dip"
        android:paddingRight="10.0dip"
        android:paddingBottom="86.0dip"
        android:rowCount="5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:paddingRight="10.0dip"
            android:text="@string/decode_data"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffffffff" />

        <TextView
            android:id="@+id/barcode_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:ellipsize="end"
            android:maxLines="2"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:paddingRight="10.0dip"
            android:text="@string/decode_length"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffffffff" />

        <TextView
            android:id="@+id/length_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:paddingRight="10.0dip"
            android:text="@string/decode_symbology"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffffffff"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/symbology_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffffffff"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:paddingRight="10.0dip"
            android:text="@string/decode_time"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffffffff"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/decode_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffffffff"
            android:visibility="gone"/>
    </GridLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <CheckBox
        android:id="@+id/continuousScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continuous_scan"
        android:layout_marginBottom="10dp"/>

    <RadioGroup
        android:id="@+id/mode_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:id="@+id/keyboard_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/keyboard_output" />
        <RadioButton
            android:id="@+id/intent_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/intent_output" />
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_vertical"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/scanButton"
            android:layout_width="wrap_content"
            android:layout_height="80.0dip"
            android:layout_centerInParent="true"
            android:background="@drawable/button_background_selector"
            android:padding="5.0dip" />
    </LinearLayout>

</LinearLayout>